--- a/src/main/resources/i18n/messages_ar.properties
+++ b/src/main/resources/i18n/messages_ar.properties
@@ -1,7 +1,101 @@
-login.input.title=\u0627\u0644\u0631\u062C\u0627\u0621 \u0627\u0644\u062F\u062E\u0648\u0644
-login.input.username = \u0625\u0633\u0645 \u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645
-login.input.password = \u0643\u0644\u0645\u0629 \u0627\u0644\u0645\u0631\u0648\u0631
-greeting=Hello! Welcome to our website!
-lang.change=Change the language
-lang.eng=English
-lang.fr=French
+############Company#############
+ft.company.contact=\u062C\u0647\u0629 \u0627\u0644\u0625\u062A\u0635\u0627\u0644
+ft.company.contracts=\u0639\u0642\u0648\u062F
+ft.company.drivers=\u0633\u0627\u0626\u0642\u064A\u0646
+ft.company.email=\u0627\u0644\u0628\u0631\u064A\u062F
+ft.company.mobile=\u0627\u0644\u0647\u0627\u062A\u0641
+ft.company.name=\u0627\u0644\u0625\u0633\u0645
+ft.company.number=\u0627\u0644\u0631\u0642\u0645
+ft.company.status=\u0627\u0644\u062D\u0627\u0644\u0629
+############Company#############
+
+###############################################################
+
+############Driver#############
+ft.driver.company=\u0627\u0644\u0634\u0631\u0643\u0629
+ft.driver.mobile=\u0627\u0644\u0647\u0627\u062A\u0641
+ft.driver.name=\u0627\u0644\u0625\u0633\u0645
+ft.driver.nationalid=\u062\u0627\u0644\u0631\u0642\u0645 \u0627\u0644\u0648\u0637\u0646\u064A
+############Driver#############
+
+###############################################################
+
+############contract#############
+ft.contract.amount=\u0627\u0644\u0631\u0635\u064A\u062F
+ft.contract.company=\u0627\u0644\u0634\u0631\u0643\u0629
+ft.contract.description=\u0627\u0644\u0648\u0635\u0641
+ft.contract.enddate=\u062A\u0627\u0631\u064A\u062E \u0627\u0644\u0625\u0646\u062A\u0647\u0627\u0621
+ft.contract.mayexceeded=\u0642\u0627\u0628\u0644 \u0644\u0644\u0632\u064A\u0627\u062F\u0629
+ft.contract.number=\u0627\u0644\u0631\u0642\u064\u0645
+ft.contract.shipments=\u0627\u0644\u0634\u062D\u0646\u0627\u062A
+ft.contract.startdate=\u062A\u0627\u0631\u064A\u062E \u0627\u0644\u0628\u062F\u0627\u064A\u0629
+ft.contract.tracks=\u062E\u0637\u0648\u0637 \u0627\u0644\u0634\u062D\u0646
+############contract#############
+
+###############################################################
+
+############group#############
+ft.group.name=\u0627\u0644\u0625\u0633\u0645
+ft.group.role=\u062F\u0648\u0631
+############group#############
+
+###############################################################
+
+############pricelist#############
+ft.pricelist.cargo=\u0627\u0644\u062D\u0645\u0648\u0644\u0629
+ft.pricelist.pricediana=\u0633\u0639\u0631 \u0627\u0644\u062F\u064A\u0627\u0646\u0629
+ft.pricelist.pricelorry=\u0633\u0639\u0631 \u0627\u0644\u0648\u0631\u064A
+ft.pricelist.priceonet=\u0633\u0639\u0631\u0627\u0644\u0627\u0648\u0646\u062A
+ft.pricelist.track=\u062E\u0637 \u0634\u062D\u0646
+############pricelist#############
+
+###############################################################
+
+############shipment#############
+ft.shipment.actualpickedupweight=\u0627\u0644\u0648\u0632\u0646 \u0627\u0644\u062D\u0642\u064A\u0642\u064A \u0648\u0642\u062A \u0627\u0644\u062A\u062D\u0645\u064A\u0644
+ft.shipment.actualrecivedweight=\u0627\u0644\u0648\u0632\u0646 \u0627\u0644\u062D\u0642\u064A\u0642\u064A \u0639\u0646\u062F \u0627\u0644\u062A\u0633\u0644\u064A\u0645
+ft.shipment.contract=\u062C\u0647\u0629 \u0627\u0644\u0625\u062A\u0635\u0627\u0644
+ft.shipment.description=\u0627\u0644\u0648\u0635\u0641
+ft.shipment.number=\u0627\u0644\u0631\u0642\u0645
+ft.shipment.orderweight=\u0648\u0632\u0646 \u0627\u0644\u0637\u0644\u0628
+ft.shipment.pickupweightreport=\u062A\u0642\u0631\u064A\u0631 \u0627\u0644\u0648\u0632\u0646 \u0639\u0646\u062F \u0627\u0644\u062A\u062D\u0645\u064A\u0644
+ft.shipment.recivedweightreport=\u062A\u0642\u0631\u064A\u0631 \u0627\u0644\u0648\u0632\u0646 \u0639\u0646\u062F \u0627\u0644\u062A\u0633\u0644\u064A\u0645
+ft.shipment.status=\u0627\u0644\u062D\u0627\u0644\u0629
+ft.shipment.track=\u062E\u0637 \u0627\u0644\u0634\u062D\u0646
+ft.shipment.trukplatnumber=\u0631\u0642\u0645 \u0644\u0648\u062D\u0629 \u0627\u0644\u0634\u0627\u062D\u0646\u0629
+############shipment#############
+
+###############################################################
+
+############track#############
+ft.track.contract=\u062C\u0647\u0629 \u0627\u0644\u0625\u062A\u0635\u0627\u0644
+ft.track.desription=\u0627\u0644\u0648\u0635\u0641
+ft.track.pricelists=\u0642\u0627\u0626\u0645\u0629 \u0627\u0644\u0623\u0633\u0639\u0627\u0631
+ft.track.shipments=\u0627\u0644\u0634\u062D\u0646\u0627\u062A
+ft.track.startingprice=\u0627\u0644\u0633\u0639\u0631 \u0627\u0644\u0625\u0628\u062A\u062F\u0627\u0626\u064A
+ft.track.warehousebywarehousefrom=\u0645\u0646 \u0645\u0633\u062A\u0648\u062F\u0639
+ft.track.warehousebywarehouseto=\u0625\u0644\u0649 \u0645\u0633\u062A\u0648\u062F\u0639
+############track#############
+
+###############################################################
+
+############user#############
+ft.user.email=\u0627\u0644\u0628\u0631\u064A\u062F
+ft.user.group=\u0645\u062C\u0645\u0648\u0639\u0629
+ft.user.name=\u0627\u0644\u0625\u0633\u0645
+ft.user.password=\u0627\u0644\u0631\u0642\u0645 \u0627\u0644\u0633\u0631\u064A
+ft.user.username=\u0627\u0633\u0645 \u0627\u0644\u0645\u0633\u062A\u062E\u062F\u0645
+############user#############
+
+###############################################################
+
+############warehouse#############
+ft.warehouse.capacity=\u0627\u0644\u0633\u0639\u0629
+ft.warehouse.city=\u0627\u0644\u0645\u062F\u064A\u0646\u0629
+ft.warehouse.description=\u0627\u0644\u0648\u0635\u0641
+ft.warehouse.manageremail=\u0628\u0631\u064A\u062F \u0627\u0644\u0645\u062F\u064A\u0631
+ft.warehouse.phonenumber=\u0631\u0642\u0645 \u0627\u0644\u0647\u0627\u062A\u0641
+ft.warehouse.tracksforwarehousefrom=\u0637\u0631\u0642 \u0645\u0646 \u0627\u0644\u0645\u062E\u0632\u0646
+ft.warehouse.tracksforwarehouseto=\u0637\u0631\u0642 \u0625\u0644\u0649 \u0627\u0644\u0645\u062E\u0632\u0646
+############warehouse#############
+
