--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,7 +1,101 @@
-login.input.username = \ ffff
-oo = oo
+############Company#############
+ft.company.contact=contact
+ft.company.contracts=contracts
+ft.company.drivers=drivers
+ft.company.email=email
+ft.company.mobile=mobile
+ft.company.name=name
+ft.company.number=number
+ft.company.status=status
+############Company#############
 
-greeting=Hello! Welcome to our website!
-lang.change=Change the language
-lang.eng=English
-lang.fr=French
+###############################################################
+
+############Driver#############
+ft.driver.company=company
+ft.driver.mobile=mobile
+ft.driver.name=name
+ft.driver.nationalid=nationalid
+############Driver#############
+
+###############################################################
+
+############contract#############
+ft.contract.amount=amount
+ft.contract.company=company
+ft.contract.description=description
+ft.contract.enddate=enddate
+ft.contract.mayexceeded=mayexceeded
+ft.contract.number=number
+ft.contract.shipments=shipments
+ft.contract.startdate=startdate
+ft.contract.tracks=tracks
+############contract#############
+
+###############################################################
+
+############group#############
+ft.group.name=name
+ft.group.role=role
+############group#############
+
+###############################################################
+
+############pricelist#############
+ft.pricelist.cargo=cargo
+ft.pricelist.pricediana=pricediana
+ft.pricelist.pricelorry=pricelorry
+ft.pricelist.priceonet=priceonet
+ft.pricelist.track=track
+############pricelist#############
+
+###############################################################
+
+############shipment#############
+ft.shipment.actualpickedupweight=actualpickedupweight
+ft.shipment.actualrecivedweight=actualrecivedweight
+ft.shipment.contract=contract
+ft.shipment.description=description
+ft.shipment.number=number
+ft.shipment.orderweight=orderweight
+ft.shipment.pickupweightreport=pickupweightreport
+ft.shipment.recivedweightreport=recivedweightreport
+ft.shipment.status=status
+ft.shipment.track=track
+ft.shipment.trukplatnumber=trukplatnumber
+############shipment#############
+
+###############################################################
+
+############track#############
+ft.track.contract=contract
+ft.track.desription=description
+ft.track.pricelists=pricelists
+ft.track.shipments=shipments
+ft.track.startingprice=startingprice
+ft.track.warehousebywarehousefrom=warehousebywarehousefrom
+ft.track.warehousebywarehouseto=warehousebywarehouseto
+############track#############
+
+###############################################################
+
+############user#############
+ft.user.email=email
+ft.user.group=group
+ft.user.name=name
+ft.user.password=password
+ft.user.username=username
+############user#############
+
+###############################################################
+
+############warehouse#############
+ft.warehouse.capacity=capacity
+ft.warehouse.city=city
+ft.warehouse.description=description
+ft.warehouse.manageremail=manageremail
+ft.warehouse.phonenumber=phonenumber
+ft.warehouse.tracksforwarehousefrom=tracksforwarehousefrom
+ft.warehouse.tracksforwarehouseto=tracksforwarehouseto
+############warehouse#############
+
